examples/avm-res-containerservice-managedcluster/0.4.0-pre1/submodules/alerting/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-containerservice-managedcluster/alerting

Module to deploy AKS alerts.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.6.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_resource.ag](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.metricalert_cpu](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.metricalert_memory](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_aks_cluster_id"></a> [aks\_cluster\_id](#input\_aks\_cluster\_id)

Description: The resource ID of the AKS cluster

Type: `string`

### <a name="input_alert_email"></a> [alert\_email](#input\_alert\_email)

Description: Email address for alert notifications

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The parent resource group ID

Type: `string`

## Optional Inputs

No optional inputs.

## Outputs

The following outputs are exported:

### <a name="output_action_group_id"></a> [action\_group\_id](#output\_action\_group\_id)

Description: The resource ID of the action group

### <a name="output_cpu_alert_id"></a> [cpu\_alert\_id](#output\_cpu\_alert\_id)

Description: The resource ID of the CPU usage alert

### <a name="output_memory_alert_id"></a> [memory\_alert\_id](#output\_memory\_alert\_id)

Description: The resource ID of the memory usage alert

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the action group created by this module

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
